getPopularHotels
