# routes/api.php
@@ -1,6 +1,8 @@
 <?php
 
 use App\Http\Controllers\Api\BookingController;
+use App\Http\Controllers\Api\HotelController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('/bookings', [BookingController::class, 'store']);
+Route::get('/hotels/popular', [HotelController::class, 'index']);
